--- a/css/project.css
+++ b/css/project.css
@@ -16,45 +16,58 @@ header {
 }
 
 footer {
-    margin-top: 10px;
+    margin-top: -30px;
     color: white;
     background-color: black;
     padding: 0.5em;
     font-size: 10px;
     text-align: center;
+    z-index: 2;
+    move-to: front;
 }
 
 #container {
     position: relative;
     width: 100%;
-    height: 1000px;
+    height: 1050px;
     font-size: 12px;
-    /*border: 1px solid gray;*/
 }
 
 #worlddata {
     position: relative;
     float: left;
-    width: 54%;
-    height: 600px;
+    width: 60%;
+    height: 650px;
     border: 1px solid gray;
+    z-index: 2;
 }
 
 #pie {
     position: relative;
     float: right;
-    width: 45%;
+    width: 39%;
     height: 300px;
     border: 1px solid gray;
+    z-index: 2;
 }
 
 #multi_linegraph {
     position: relative;
     float: left;
     margin-top: 10px;
-    width: 100%;
-    height: 380px;
+    width: 60%;
+    height: 350px;
     border: 1px solid gray;
+    z-index: 2;
+}
+
+#gass_info {
+    position: relative;
+    float: right;
+    width: 39%;
+    border: 1px solid gray;
+    height: 700px;
+    margin-top: 10px;
 }
 
 h2 {
@@ -82,31 +95,36 @@ button {
 }
 
 #button_GHG {
-    left: 50px;
+    left: 100px;
     border: 4px solid #bd0026;
-
 }
 
 #button_GDP {
-    left: 450px;
+    left: 500px;
     border: 4px solid #006837;
 }
 
 #button_Population {
-    left: 250px;
+    left: 300px;
     border: 4px solid #253494;
 }
 
 .datamap {
     position: absolute;
-    left: 20px;
+    left: 10px;
     top: 0;
-    /*border: 1px solid;*/
+}
+
+.datamaps-legend {
+    position: absolute;
+    top: 40px;
+    margin-left: 100px;
 }
 
 .d3-slider {
     position: absolute;
-    top: 560px;
+    width: 720px;
+    top: 610px;
     left: 50px;
     font-family: Verdana,Arial,sans-serif;
     font-size: 1.1em;
@@ -129,7 +147,7 @@ button {
 
 .piechart {
     position: absolute;
-    right: 100px;
+    right: 50px;
     top: 10px;
 }
 
@@ -194,4 +212,47 @@ button {
     font-size: 12px;
     font-weight: bold;
     text-anchor: middle;
+}
+
+table {
+    position: absolute;
+    width: 80%;
+    top: 60px;
+    left: 50px;
+    z-index: 2;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr {
+    height: 40px;
+}
+
+td {
+    border-bottom: 1px solid gray;
+    border-top: 1px solid gray
+}
+
+td.first {
+    width: 120px;
+    font-size: 14px;
+}
+
+iframe {
+    move-to: back;
+    z-index: 1;
+    position: absolute;
+    bottom: -100px;
+    left: -150px;
+    zoom: 2.5;
+    background-color: transparent;
+}
+
+img {
+    position: absolute;
+    bottom: -50px;
+    left: 120px;
+    zoom: 0.4;
 }
