--- a/css/project.css
+++ b/css/project.css
@@ -61,7 +61,7 @@ footer {
     z-index: 2;
 }
 
-#gass_info {
+#gas_info {
     position: relative;
     float: right;
     width: 39%;
@@ -70,9 +70,15 @@ footer {
     margin-top: 10px;
 }
 
-h2 {
+h3 {
     position: absolute;
-    left: 30%;
+    left: 55%;
+    top: 0;
+}
+
+h3#linegraph-title {
+    position: absolute;
+    left: 20%;
     top: 0;
 }
 
@@ -117,7 +123,7 @@ button {
 
 .datamaps-legend {
     position: absolute;
-    top: 40px;
+    top: 50px;
     margin-left: 100px;
 }
 
@@ -125,7 +131,7 @@ button {
     position: absolute;
     width: 720px;
     top: 610px;
-    left: 50px;
+    left: 60px;
     font-family: Verdana,Arial,sans-serif;
     font-size: 1.1em;
     border: 1px solid #aaaaaa;
@@ -147,7 +153,7 @@ button {
 
 .piechart {
     position: absolute;
-    right: 50px;
+    right: 70px;
     top: 10px;
 }
 
@@ -176,7 +182,6 @@ button {
 }
 
 .line {
-    stroke: #d95f02;
     stroke-width: 1.5;
     fill: none;
 }
@@ -193,20 +198,20 @@ button {
 
 .xline,
 .yline {
-    stroke: blue;
+    stroke: black;
     stroke-dasharray: 3.3;
     opacity: 0.5;
 }
 
-.infotextpath {
-    stroke: white;
-    stroke-width: 3,5px;
-    opacity: 0.8;
-}
+/*.infotextpath {*/
+    /*stroke: white;*/
+    /*stroke-width: 3,5px;*/
+    /*opacity: 0.5;*/
+/*}*/
 
-.infotext {
-    font-weight: bold;
-}
+/*.infotext {*/
+    /*font-weight: bold;*/
+/*}*/
 
 .legend {
     font-size: 12px;
@@ -214,12 +219,18 @@ button {
     text-anchor: middle;
 }
 
-table {
+table#pie-table {
+    position: absolute;
+    width: 40%;
+    top: 70px;
+    left: 55%;
+}
+
+table#gas-table {
     position: absolute;
     width: 80%;
     top: 60px;
     left: 50px;
-    z-index: 2;
 }
 
 tr:nth-child(even) {
@@ -236,7 +247,7 @@ td {
 }
 
 td.first {
-    width: 120px;
+    width: 110px;
     font-size: 14px;
 }
 
@@ -256,3 +267,20 @@ img {
     left: 120px;
     zoom: 0.4;
 }
+
+div.tooltip {
+  position: absolute;
+  text-align: left;
+  width: 120px;
+  height: 100px;
+  padding: 1px;
+  font: bold 12px sans-serif;
+  background: whitesmoke;
+  border: 0;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
+/*.tooltip.innerHTML {*/
+    /*opacity: 1;*/
+/*}*/
