--- a/css/project.css
+++ b/css/project.css
@@ -16,7 +16,7 @@ header {
 }
 
 footer {
-    margin-top: -30px;
+    margin-top: 10px;
     color: white;
     background-color: black;
     padding: 0.5em;
@@ -33,204 +33,9 @@ footer {
     font-size: 12px;
 }
 
-#worlddata {
-    position: relative;
-    float: left;
-    width: 60%;
-    height: 650px;
-    border: 1px solid gray;
-    z-index: 2;
-}
-
-#pie {
-    position: relative;
-    float: right;
-    width: 39%;
-    height: 300px;
-    border: 1px solid gray;
-    z-index: 2;
-}
-
-#multi_linegraph {
-    position: relative;
-    float: left;
-    margin-top: 10px;
-    width: 60%;
-    height: 350px;
-    border: 1px solid gray;
-    z-index: 2;
-}
-
-#gas_info {
-    position: relative;
-    float: right;
-    width: 39%;
-    border: 1px solid gray;
-    height: 700px;
-    margin-top: 10px;
-}
-
 h3 {
-    position: absolute;
-    left: 55%;
+    position: relative;
     top: 0;
-}
-
-h3#linegraph-title {
-    position: absolute;
-    left: 20%;
-    top: 0;
-}
-
-button {
-    position: absolute;
-    top: 10px;
-    z-index: 3;
-    border: none;
-    color: black;
-    /*padding: 15px 32px;*/
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    font-weight: bold;
-    border-radius: 6px;
-    width: 180px;
-    height: 30px;
-    background-color: white;
-}
-
-#button_GHG {
-    left: 100px;
-    border: 4px solid #bd0026;
-}
-
-#button_GDP {
-    left: 500px;
-    border: 4px solid #006837;
-}
-
-#button_Population {
-    left: 300px;
-    border: 4px solid #253494;
-}
-
-.datamap {
-    position: absolute;
-    left: 10px;
-    top: 0;
-}
-
-.datamaps-legend {
-    position: absolute;
-    top: 50px;
-    margin-left: 100px;
-}
-
-.d3-slider {
-    position: absolute;
-    width: 720px;
-    top: 610px;
-    left: 60px;
-    font-family: Verdana,Arial,sans-serif;
-    font-size: 1.1em;
-    border: 1px solid #aaaaaa;
-    z-index: 2;
-}
-
-.datamaps-hoverover {
-    color: black;
-    font-family: sans-serif;
-    font-weight: bold;
-}
-
-#linegraph {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    /*border: 0.5px solid;*/
-}
-
-.piechart {
-    position: absolute;
-    right: 70px;
-    top: 10px;
-}
-
-/*.charttitle {*/
-    /*position: absolute;*/
-    /*left: 70%;*/
-    /*top: 130px;*/
-    /*font-size: 18px;*/
-/*}*/
-
-.keytext {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.pie-label {
-    text-anchor: middle;
-}
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: grey;
-    stroke-width: 1;
-    shape-rendering: crispEdges;
-}
-
-.line {
-    stroke-width: 1.5;
-    fill: none;
-}
-
-.overlay {
-  fill: none;
-  pointer-events: all;
-}
-
-.focus circle {
-  fill: none;
-  stroke: blue;
-}
-
-.xline,
-.yline {
-    stroke: black;
-    stroke-dasharray: 3.3;
-    opacity: 0.5;
-}
-
-/*.infotextpath {*/
-    /*stroke: white;*/
-    /*stroke-width: 3,5px;*/
-    /*opacity: 0.5;*/
-/*}*/
-
-/*.infotext {*/
-    /*font-weight: bold;*/
-/*}*/
-
-.legend {
-    font-size: 12px;
-    font-weight: bold;
-    text-anchor: middle;
-}
-
-table#pie-table {
-    position: absolute;
-    width: 40%;
-    top: 70px;
-    left: 55%;
-}
-
-table#gas-table {
-    position: absolute;
-    width: 80%;
-    top: 60px;
-    left: 50px;
 }
 
 tr:nth-child(even) {
@@ -251,35 +56,28 @@ td.first {
     font-size: 14px;
 }
 
-iframe {
-    move-to: back;
-    z-index: 1;
-    position: absolute;
-    bottom: -100px;
-    left: -150px;
-    zoom: 2.5;
-    background-color: transparent;
-}
+/*.charttitle {*/
+    /*position: absolute;*/
+    /*left: 70%;*/
+    /*top: 130px;*/
+    /*font-size: 18px;*/
+/*}*/
 
-img {
-    position: absolute;
-    bottom: -50px;
-    left: 120px;
-    zoom: 0.4;
-}
+/*.infotextpath {*/
+    /*stroke: white;*/
+    /*stroke-width: 3,5px;*/
+    /*opacity: 0.5;*/
+/*}*/
 
-div.tooltip {
-  position: absolute;
-  text-align: left;
-  width: 120px;
-  height: 100px;
-  padding: 1px;
-  font: bold 12px sans-serif;
-  background: whitesmoke;
-  border: 0;
-  border-radius: 8px;
-  pointer-events: none;
-}
+/*.infotext {*/
+    /*font-weight: bold;*/
+/*}*/
+
+/*.legend {*/
+    /*font-size: 12px;*/
+    /*font-weight: bold;*/
+    /*text-anchor: middle;*/
+/*}*/
 
 /*.tooltip.innerHTML {*/
     /*opacity: 1;*/
