--- a/css/worldmap.css
+++ b/css/worldmap.css
@@ -8,7 +8,7 @@
     z-index: 2;
 }
 
-button {
+[type="button"] {
     position: relative;
     top: 10px;
     z-index: 3;
@@ -18,7 +18,7 @@ button {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: bold;
     border-radius: 6px;
     width: 180px;
@@ -26,8 +26,40 @@ button {
     background-color: white;
 }
 
-#button_GHG {
+/*.dropbtn:hover, .dropbtn:focus {*/
+    /*background-color: #3e8e41;*/
+/*}*/
+
+.dropdown {
+    position: relative;
+    display: inline-block;
     left: 15%;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    /*background-color: #f9f9f9;*/
+    /*min-width: 160px;*/
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+    z-index: 4;
+}
+
+.dropdown-content a {
+    /*padding: 12px 16px;*/
+    width: 140px;
+    margin-left: 20px;
+    display: block;
+    border: 4px solid #bd0026;
+    top: -90px;
+}
+
+.show {
+    display: block;
+    z-index: 3;
+}
+
+.dropbtn{
     border: 4px solid #bd0026;
 }
 
@@ -57,6 +89,7 @@ button {
     position: relative;
     top: 50px;
     margin-left: 100px;
+    move-to: back;
 }
 
 .d3-slider {
