--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+/* Programmeer Project */
+
+/* Laila Blömer */
+/* 10563865 */
+
+/* main.css general styling*/
 
 body {
     font-family: sans-serif;
@@ -55,30 +61,3 @@ td.first {
     width: 110px;
     font-size: 14px;
 }
-
-/*.charttitle {*/
-    /*position: absolute;*/
-    /*left: 70%;*/
-    /*top: 130px;*/
-    /*font-size: 18px;*/
-/*}*/
-
-/*.infotextpath {*/
-    /*stroke: white;*/
-    /*stroke-width: 3,5px;*/
-    /*opacity: 0.5;*/
-/*}*/
-
-/*.infotext {*/
-    /*font-weight: bold;*/
-/*}*/
-
-/*.legend {*/
-    /*font-size: 12px;*/
-    /*font-weight: bold;*/
-    /*text-anchor: middle;*/
-/*}*/
-
-/*.tooltip.innerHTML {*/
-    /*opacity: 1;*/
-/*}*/
