--- a/css/worldmap.css
+++ b/css/worldmap.css
@@ -1,3 +1,9 @@
+/* Programmeer Project */
+
+/* Laila Blömer */
+/* 10563865 */
+
+/* worldmap.css styling worldmap, slider, buttons */
 
 #worlddata-row {
     position: relative;
@@ -8,10 +14,10 @@
     z-index: 2;
 }
 
-[type="button"] {
+button {
     position: relative;
     top: 10px;
-    z-index: 3;
+    z-index: 2;
     border: none;
     color: black;
     /*padding: 15px 32px;*/
@@ -26,40 +32,8 @@
     background-color: white;
 }
 
-/*.dropbtn:hover, .dropbtn:focus {*/
-    /*background-color: #3e8e41;*/
-/*}*/
-
-.dropdown {
-    position: relative;
-    display: inline-block;
+#button_GHG{
     left: 15%;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    /*background-color: #f9f9f9;*/
-    /*min-width: 160px;*/
-    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
-    z-index: 4;
-}
-
-.dropdown-content a {
-    /*padding: 12px 16px;*/
-    width: 140px;
-    margin-left: 20px;
-    display: block;
-    border: 4px solid #bd0026;
-    top: -90px;
-}
-
-.show {
-    display: block;
-    z-index: 3;
-}
-
-.dropbtn{
     border: 4px solid #bd0026;
 }
 
@@ -108,4 +82,3 @@
     font-family: sans-serif;
     font-weight: bold;
 }
-
