--- a/GreenhouseGasEmission/css/linegraph.css
+++ b/GreenhouseGasEmission/css/linegraph.css
@@ -7,9 +7,9 @@
 
 #multi_linegraph {
     position: relative;
-    width: 100%;
     margin-top: 10px;
-    margin-right: 10px;
+    margin-right: 5px;
+    margin-left: 25px;
     height: 350px;
     border: 1px solid gray;
     z-index: 2;
