--- a/GreenhouseGasEmission/css/molecule.css
+++ b/GreenhouseGasEmission/css/molecule.css
@@ -7,10 +7,11 @@
 
 #gas_info {
     position: relative;
-    width: 100%;
+    margin-top: 10px;
+    margin-right: 30px;
+    width: inherit;
     border: 1px solid gray;
     height: 700px;
-    margin-top: 10px;
 }
 
 #molecule {
