--- a/GreenhouseGasEmission/css/worldmap.css
+++ b/GreenhouseGasEmission/css/worldmap.css
@@ -9,6 +9,7 @@
     position: relative;
     width: 100%;
     margin-right: 10px;
+    margin-left: 10px;
     height: 650px;
     border: 1px solid gray;
     z-index: 2;
@@ -49,27 +50,28 @@ button {
 
 #worlddata {
     width: 100%;
-    height: 80%;
+    height: 85%;
     margin-top: 40px;
 }
 
 .datamap {
     position: relative;
-    margin-left: 10px;
-    top: 10px;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 30px;
 }
 
 .datamaps-legend {
     position: relative;
+    margin-left: 15%;
     top: 50px;
-    margin-left: 100px;
     move-to: back;
 }
 
 .d3-slider {
     position: relative;
     width: 720px;
-    /*top: -40px;*/
+    top: -10px;
     left: 10%;
     font-family: sans-serif;
     font-size: 1.1em;
