--- a/css/worldmap.css
+++ b/css/worldmap.css
@@ -33,17 +33,17 @@ button {
     background-color: white;
 }
 
-#button_GHG{
+#GHG{
     left: 15%;
     border: 4px solid #bd0026;
 }
 
-#button_GDP {
+#GDP {
     left: 25%;
     border: 4px solid #006837;
 }
 
-#button_Population {
+#population {
     left: 20%;
     border: 4px solid #253494;
 }
